kubernetes/deployment/deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: "foo.bar.dev.com"
      http: 
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - pathType: Prefix
            # path: "/mongo-express"
            path: "/"
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
